objects/Schedule_Day__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <formula>Schedule_Template__r.Color__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Elapsed__c</fullName>
        <label>Class Days Elapsed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferenceId__c</fullName>
        <externalId>true</externalId>
        <label>ReferenceId</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Period</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Schedule Days</relationshipLabel>
        <relationshipName>Schedule_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule Template</label>
        <referenceTo>Schedule_Template__c</referenceTo>
        <relationshipLabel>Schedule Days</relationshipLabel>
        <relationshipName>Schedule_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Schedule Day</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Schedule_Template__c</columns>
        <columns>NAME</columns>
        <columns>Color__c</columns>
        <columns>Day__c</columns>
        <columns>Published__c</columns>
        <columns>ReferenceId__c</columns>
        <columns>Reporting_Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Schedule Day Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>