objects/Schedule_Day__c/fields/Schedule_day_18_digit_id__c.field-meta.xml
<CustomField>
    <fullName>Schedule_day_18_digit_id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule day 18 digit id</label>
    <type>Text</type>
</CustomField>