objects/Schedule_Day__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Schedule_Template__c</columns>
    <columns>NAME</columns>
    <columns>Color__c</columns>
    <columns>Day__c</columns>
    <columns>Published__c</columns>
    <columns>ReferenceId__c</columns>
    <columns>Reporting_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>